# krist-synth

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/pipelines/: example.yaml  generate_hermes.yaml  reward_model_approval.yaml  skywork_reward_approval.yaml  translation_hermes.yaml
prompts/prompt_hard/: scoring.md
prompts/quant-align/: dict_generate.md
prompts/scoring_prompt/: creativity_1to5.md
prompts/stage1_prompts/: template_3.md  template_example_1.md  template_example_2.md
prompts/translation/: hermes_translate.md  system_translate.md
src/: __init__.py  openai_client.py
src/pipeline/: runner.py
src/pipeline/batcher/: base_batcher.py  dynamic_batcher.py  static_batcher.py
src/pipeline/steps/: base_step.py  llm.py  multi_turn_generation.py  parsing.py  prompt.py  reward_model.py  translation.py
